<resources>
    <string name="app_name">e-rendezvous</string>
    <string name="login" />
    <string name="password">Κωδικός πρόσβασης</string>
    <string name="username">Όνομα χρήστη</string>
    <string name="Signup_message">Επιλέξτε το είδος του λογαριασμού</string>
    <string name="SimpleUserButton">Χρήστης</string>
    <string name="preSignUpMessage1">Είσαι <b>απλός χρήστης</b> ή <b>επαγγελματίας</b>;</string>
    <string name="preSignUpMessage2">Επέλεξε το είδος του λογαριασμού που σε ενδιαφέρει και γίνε μέλος στο eRendezvous</string>
    <string name="ProfUserButton">Επαγγελματίας</string>
    <string name="simpleUserSignupText">Συμπλήρωσε τα στοιχεία σου</string>
    <string name="SignupText">Κάνε Εγγραφή!</string>
    <string name="SimpleUserSignupBotton">Εγγραφή</string>
    <string name="PhoneTextField">Τηλέφωνο</string>
    <string name="CityTextField">Πόλη</string>
    <string name="EmailTextField">Email</string>
    <string name="NameTextField">Όνοματεπώνυμο</string>
    <string name="CitiesSpinner">Πόλη</string>
    <string name="ProfUserSignupButton">Εγγραφή</string>
    <string name="UploadPhotoButton">Ανέβασε Φωτογραφία</string>
    <string name="BackToLogin">Επιστροφή για σύνδεση</string>
    <string name="businessSignup">Συμπλήρωσε Στοιχεία Επιχείρησης</string>
    <string name="BusinessName">Επωνυμία Επιχείρησης</string>
    <string name="businessAddress">Διεύθυνση</string>
    <string name="postCode">Ταχυδρομικός Κώδικός</string>
    <string name="businessPhone">Τηλέφωνο</string>
    <string name="addNewServiseGroup">Πρόσθεσε Κατηγορία</string>
    <string name="addServiceGroupText">Δημιούργησε τις κατηγορίες των υπηρεσιών που προσφέρεις</string>
    <string name="addServisesText">Δημιούργησε τις υπηρεσίες της επιλεγμένης κατηγορίας</string>
    <string name="addNewServise">Όνομα Υπηρεσίας</string>
    <string name="ServiceDescription">Περιγραφή Υπηρεσίας</string>
    <string name="ServiseCostEditText">Κόστος</string>
    <string name="ServiceDuretionEditText">Διάρκεια</string>
    <string name="weekScheduleText">Επέλεξε την μέρα που θέλεις</string>
    <string name="info_group_popup_text">Συμπλήρωσε τις κατηγορίες των υπηρεσιών σου για να διαμορφώσουμε όσο το δυνατόν καλύτερα το επαγγελματικό σου προφίλ. Ομαδοποίησε τις υπηρεσίες σου ανάλογα με το είδος τους και το κοινό στο οποίο απευθύνονται!</string>
    <string name="info_service_popup_text">Συμπλήρωσε τις πληροφορίες για κάθε υπηρεσία που παρέχεις! Δώσε μας τίτλο, σύντομη περιγραφή, διάρκεια και κόστος. Τα υπόλοιπα τα αναλαμβάνουμε εμείς! </string>
    <string name="finishButton">Ολοκλήρωση</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>