<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/general_background"
    tools:context=".SimpleUserSignup">

    <EditText
        android:id="@+id/username"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/ic_username"
        android:drawablePadding="10dp"
        android:maxLength="100"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guideline36"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline35" />


    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:maxLength="100"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/guideline37"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline36" />

    <Button
        android:id="@+id/SimpleUserSignupButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button"
        android:text="@string/SimpleUserSignupBotton"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline37" />

    <EditText
        android:id="@+id/PhoneTextField"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/ic_phone"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/PhoneTextField"
        android:maxLength="100"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/guideline33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline32" />

    <EditText
        android:id="@+id/EmailTextField"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/EmailTextField"
        android:inputType="textEmailAddress"
        android:maxLength="100"
        app:layout_constraintBottom_toTopOf="@+id/guideline35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline34" />

    <EditText
        android:id="@+id/NameTextField"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/ic_full_name"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/NameTextField"
        android:maxLength="100"
        android:inputType="textCapWords"
        app:layout_constraintBottom_toTopOf="@+id/guideline32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline38" />

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/CitySpinner"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:dropDownWidth="wrap_content"
        android:entries="@array/Cities"
        app:layout_constraintBottom_toTopOf="@+id/guideline34"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline33" />

    <ImageView
        android:id="@+id/cityPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_city"
        app:layout_constraintBottom_toBottomOf="@+id/CitySpinner"
        app:layout_constraintEnd_toStartOf="@+id/CitySpinner"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/CitySpinner"
        app:layout_constraintVertical_bias="0.562" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="251dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="323dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="400dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="474dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="549dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="631dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="176dp" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toTopOf="@+id/guideline41"
        app:layout_constraintEnd_toStartOf="@+id/guideline42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="65dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="84dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simpleUserSignupText"
        android:textAlignment="center"
        android:textColor="@color/blue_color"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline38"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline41" />


</androidx.constraintlayout.widget.ConstraintLayout>