<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.ServiceRegistration"
    android:background="@drawable/groups_background">

    <ImageButton
        android:id="@+id/questionmarkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_info"
        app:layout_constraintBottom_toBottomOf="@+id/finishServisesButton"
        app:layout_constraintEnd_toStartOf="@+id/finishServisesButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/finishServisesButton" />

    <ImageButton
        android:id="@+id/addServiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_add"
        app:layout_constraintBottom_toTopOf="@+id/serviceRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/addServicesTextView" />

    <TextView
        android:id="@+id/addServicesTextView"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/addServisesText"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@id/newServiceEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SelectedGroupName" />

    <EditText
        android:id="@+id/newServiceEditText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/group_edit_text_ring"
        android:ems="10"
        android:hint="@string/addNewServise"
        android:inputType="textPersonName"
        android:maxLength="100"
        android:padding="10dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/ServiceDescription"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addServicesTextView" />

    <EditText
        android:id="@+id/ServiceDescription"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/group_edit_text_ring"
        android:ems="10"
        android:hint="@string/ServiceDescription"
        android:inputType="textPersonName"
        android:maxLength="100"
        android:padding="10dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/ServiseCostEditText"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newServiceEditText" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toTopOf="@+id/guideline41"
        app:layout_constraintEnd_toStartOf="@+id/guideline42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="65dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="84dp" />

    <EditText
        android:id="@+id/ServiseCostEditText"
        android:layout_width="115dp"
        android:layout_height="40dp"
        android:background="@drawable/group_edit_text_ring"
        android:ems="10"
        android:hint="@string/ServiseCostEditText"
        android:inputType="number"
        android:maxLength="100"
        android:padding="10dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/serviceRecyclerView"
        app:layout_constraintEnd_toStartOf="@id/ServiceDuretionEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ServiceDescription" />

    <EditText
        android:id="@+id/ServiceDuretionEditText"
        android:layout_width="115dp"
        android:layout_height="40dp"
        android:background="@drawable/group_edit_text_ring"
        android:ems="10"
        android:hint="@string/ServiceDuretionEditText"
        android:inputType="number"
        android:maxLength="100"
        android:padding="10dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/ServiseCostEditText"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toEndOf="@+id/ServiseCostEditText"
        app:layout_constraintTop_toTopOf="@+id/ServiseCostEditText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/serviceRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/recycler_view_backgroud"
        app:layout_constraintBottom_toTopOf="@id/finishServisesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ServiseCostEditText" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="291dp" />

    <TextView
        android:id="@+id/SelectedGroupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25dp"
        android:maxWidth="240dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/addServicesTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/finishServisesButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/group_finish_button"
        android:text="@string/finishButton"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/questionmarkButton"
        app:layout_constraintTop_toBottomOf="@id/serviceRecyclerView" />

</androidx.constraintlayout.widget.ConstraintLayout>